# FlexFlow

./: CMakeLists.txt
config/: config.linux
examples/cpp/CLIP/: CMakeLists.txt  Makefile  clip.cc  clip.cu  clip.h  exp.sh  partition1.txt  partition2.txt  partition3.txt  profile.sh  synthetic.cc
examples/cpp/CLIP/clip-models/: clip-img-txt.cc  clip-n-text-branches.cc  two-image-stream.cc
examples/cpp/CLIP/scripts/: 2stream16.sh  2stream4.sh  2stream8.sh  exp-16-2-1.sh  exp-16-2-2.sh  exp-16-2-3.sh  exp-16-4-1.sh  exp-16-4-2.sh  exp-16-4-3.sh  exp-4-2-2.sh  exp-4-2-3.sh  exp-4-4-2.sh  exp-4-4-3.sh  exp-8-2-1.sh  exp-8-2-2.sh  exp-8-2-3.sh  exp-8-4-1.sh  exp-8-4-2.sh  exp-8-4-3.sh
examples/cpp/DLRM/: dlrm.cc
examples/cpp/candle_uno/: candle_uno.cc  candle_uno.h
include/flexflow/: config.h  parallel_tensor.h
include/flexflow/ops/: attention.h  batch_matmul.h  reshape.h  transpose.h
src/ops/: attention.cc  batch_matmul.cc  concat.cc  conv_2d.cc  element_binary.cc  element_unary.cc  embedding.cc  flat.cc  fused.cc  fused.cu  linear.cc  pool_2d.cc  reshape.cc  split.cc  transpose.cc
src/runtime/: graph.cc  initializer_kernel.cpp  initializer_kernel.cu  machine_view.cc  model.cc  strategy.cc  substitution.cc
